--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.107",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-icons": "^3.0.0",
+    "install": "^0.13.0",
+    "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
