--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-icons": "^3.0.0",
+    "framer-motion": "^11.5.4",
     "install": "^0.13.0",
     "npm": "^10.8.3",
     "react": "^18.3.1",
